Add class RealParameterTest